# ead-langchain-template

./: .env.example  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/complete/designs/: 000-architecture-overview.md  001-project-structure.md  002-configuration-design.md  003-logging-design.md  004-examples-design.md  005-testing-strategy.md  006-documentation-strategy.md
docs/complete/phases/: phase-01-project-foundation.md  phase-02-core-interfaces-utilities.md  phase-03-testing-infrastructure.md  phase-04-basic-examples.md  phase-05-advanced-examples.md  phase-06-final-documentation.md
docs/complete/requirements/: 000-overview.md  001-functional-requirements.md  002-technical-requirements.md  003-environment-conventions.md  004-quality-requirements.md
docs/complete/tasks/: task-001-initialize-project.md  task-002-setup-github-write-copilot-instructions.md  task-003-create-env-example.md  task-004-setup-pytest-infrastructure.md  task-005-create-enforcement-tests.md  task-006-config-module.md  task-007-logging-module.md  task-008-create-exports-configure-ruff.md  task-009-implement-basic-examples.md  task-010-implement-advanced-examples.md  task-011-write-comprehensive-readme.md
examples/: 01_basic.ipynb  01_basic.py  02_streaming.ipynb  02_streaming.py  03_conversation.ipynb  03_conversation.py  04_advanced.ipynb  04_advanced.py
scripts/: sync_notebooks.py
src/langchain_llm/: __init__.py  config.py  interfaces.py  logging_config.py
tests/: __init__.py  conftest.py
tests/enforcement/: __init__.py  test_no_emojis.py  test_sphinx_docstrings.py
tests/integration/: __init__.py  test_sync_notebooks.py
tests/unit/: test_config.py  test_examples.py  test_interfaces.py  test_logging.py
